feat: Add Cellular Automaton section and Background subsection

--- a/Proyecto/investigacion.tex
+++ b/Proyecto/investigacion.tex
@@ -11,6 +11,7 @@
 \usepackage{array}
 \usepackage{booktabs}
 \usepackage{tabularx}
+\usepackage{multicol}
 \usepackage{multirow}
 \usepackage{amsmath}
 \usepackage{hyperref}
@@ -85,6 +86,13 @@
         algorithm, and conclude the viability of using cellular automaton for an implementation as the next step in this investigation.
     \newpage
 
-    
+    \begin{multicols}{2}
+        \section{Cellular Automaton}
+        A cellular automaton is a discrete model studied in computational theory, mathematics,
+        physics, complexity science, and theoretical biology. It consists of a grid of cells,
+        each of which can be in one of a finite number of states.
+        \subsection{Background}
 
+
+    \end{multicols}
 \end{document}
