--- a/Proyecto/investigacion.tex
+++ b/Proyecto/investigacion.tex
@@ -25,19 +25,17 @@
 % AUTHORS, AFFILIATIONS AND PROFESSOR
 %----------------------------------------------------------
 
-\author[a,1]{Leo}
-\author[a,2]{Diego}
-\author[a,3]{Aldo}
-\author[a,4]{Edu}
-\author[b,5]{Dra. Miriam}
+\author[a]{Diego Castillo Reyes}
+\author[a]{Marthon Leobardo Yañez Martinez}
+\author[a]{Aldo Escamilla Resendiz}
+\author[a]{Muñoz González Eduardo}
 
 %----------------------------------------------------------
 
-\affil[a]{Estudiante}
-\affil[b]{Tutora}
+\affil[a]{Researcher}
 
 
-\professor{Professor/Authority or other information}
+\professor{Dra. Miriam Pescador Rojas}
 
 %----------------------------------------------------------
 % FOOTER INFORMATION
@@ -67,9 +65,9 @@
 \begin{document}
 		
     \maketitle 
-    \thispagestyle{firststyle} \tauabstract 
+    \thispagestyle{firststyle} \tauabstract
     \tableofcontents
-    \linenumbers 
+    \linenumbers
 %----------------------------------------------------------
 
 \section{Introduction}
@@ -192,7 +190,7 @@
 		
 \section{Equation}
 
-    Equation \ref{ec:equation}, shows the Schrödinger equation as an example. 
+    Equation~\ref{ec:equation}, shows the Schrödinger equation as an example. 
 	\begin{equation} \label{ec:equation}
 		\frac{\hbar^2}{2m}\nabla^2\Psi + V(\mathbf{r})\Psi = -i\hbar \frac{\partial\Psi}{\partial t}
 	\end{equation} 
@@ -216,7 +214,9 @@
 	
 \section{References}
 
-    The default formatting for references follows the IEEE style. You can modify the style of your references, for that, go to tau-class/tau.cls/biblatex. See appendix for more information.
+    The default formatting for references follows the IEEE style. 
+    You can modify the style of your references, for that, go to tau-class/tau.cls/biblatex. 
+    See appendix for more information.
 	
 \section{Appendix}
 
