feat: Add algorithm2e package for including algorithms and information

--- a/Proyecto/investigacion.tex
+++ b/Proyecto/investigacion.tex
@@ -129,45 +129,9 @@
 		\caption{Example of cellular automata.}
 		\label{fig:figure}
 	\end{figure}
-        \begin{figure*}[tp] % t for position at the top of the current page; b for position at the bottom; p for new page
-		\centering
-		  \begin{subfigure}[b]{0.38\linewidth} % Fig (a)
-			\includegraphics[width=\linewidth]{figures/Example2.pdf}
-			\caption{Example left figure.}
-			\label{fig:figa}
-		\end{subfigure}
-			\hspace{20pt}   % Space between the figures
-		\begin{subfigure}[b]{0.375\linewidth} % Fig (b)
-			\includegraphics[width=\linewidth]{figures/Example3.pdf}
-			\caption{Example right figure.}
-			\label{fig:figb}
-		\end{subfigure}
-		\caption{Example figure that covers the width of the page obtained from PGFPlots \cite{PFGPlots}.}
-		\label{fig:examplefloat}
-	\end{figure*}
-	
-    \subsection{Tables}
-	
-        Table \ref{tab:table} shows an example table. The \verb|\tabletext{}| is used to add notes to tables easily. 
-		
-	\begin{table}[H]
-		\centering
-		\caption{Small example table.}
-		\label{tab:table}
-		\begin{tabular}{cc}
-			\toprule
-			\textbf{Column 1} & \textbf{Column 2} \\
-			\midrule
-			Data 1 & Data 2 \\
-			Data 3 & Data 4 \\
-			\bottomrule
-		\end{tabular}
-			
-            \tabletext{Note: I'm a table text for additional information.}
-			
-	\end{table}
-		
-\section{Tau packages}
+    \newpage
+
+\section{Cellular Automata Algorithm}
 
     \subsection{Tauenvs}
 	
